--- a/client/src/pages/Signup/SignUp.css
+++ b/client/src/pages/Signup/SignUp.css
@@ -61,6 +61,7 @@
     border-radius: 10px;
     margin: 5px 0;
     font-size: 14px;
+    cursor: pointer;
   }
   
   .profile {
@@ -79,28 +80,33 @@
     color: #50b7f5;
   }
   
-  
-  
-  
-  
   .green_btn {
     border: none;
     outline: none;
     padding: 12px 0;
-    background-color: white;
+    background-color: #50b7f5;
     border-radius: 20px;
-    width: 100%;
+    width: 90%;
     font-weight: bold;
     font-size: 14px;
-    cursor: pointer;
-  }
-  
-  .green_btn {
-    background-color: #50b7f5;
     color: white;
     margin: 10px;
+    cursor: pointer;
   }
-  
+
+  .disabled {
+    border: none;
+    outline: none;
+    padding: 12px 0;
+    background-color: lightgrey;
+    border-radius: 20px;
+    width: 90%;
+    font-weight: bold;
+    font-size: 14px;
+    cursor: default;
+    margin: 10px;
+  }
+
   .form-link {
     margin-left: 3px;
     color: grey
